--- a/testimonial.html
+++ b/testimonial.html
@@ -167,10 +167,9 @@
                 </h1>
                 <nav aria-label="breadcrumb animated slideInDown">
                     <ol class="breadcrumb justify-content-center mb-0">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                        <li class="breadcrumb-item"><a href="#">Главная</a></li>
                         <li class="breadcrumb-item" aria-current="page">
-                            Testimonial
+                            Отзывы
                         </li>
                     </ol>
                 </nav>
